--- a/templates/mu_to_egamma.cpp.in
+++ b/templates/mu_to_egamma.cpp.in
@@ -126,7 +126,7 @@ double OneLoopFunctionB(double r)
       return 1.0/12.0;
    }
    else {
-      (1.0 - 6.0*r + 3.0*r*r + 2.0*r*r*r - 6.0*r*r*std::log(r))/6.0/pow(1.0-r,4);
+      return (1.0 - 6.0*r + 3.0*r*r + 2.0*r*r*r - 6.0*r*r*std::log(r))/6.0/pow(1.0-r,4);
    }
 }
 
@@ -138,7 +138,7 @@ double OneLoopFunctionC(double r)
       return 1.0;
    }
    else {
-      (1.0 - r*r + 2.0*r*std::log(r))/pow(1.0-r,3);
+      return (1.0 - r*r + 2.0*r*std::log(r))/pow(1.0-r,3);
    }
 }
 
@@ -148,7 +148,7 @@ double OneLoopFunctionD(double r)
       return -9.0/2.0;
    }
    else {
-      (16.0 - 45.0*r + 36.0*r*r - 7.0*r*r*r + 6.0*(2.0-3.0*r)*std::log(r))/pow(1.0-r,4);
+      return (16.0 - 45.0*r + 36.0*r*r - 7.0*r*r*r + 6.0*(2.0-3.0*r)*std::log(r))/pow(1.0-r,4);
    }
 }
 
@@ -160,7 +160,7 @@ double OneLoopFunctionE(double r)
       return 1.0/3.0;
    }
    else {
-      (2.0 + 3.0*r - 6.0*r*r + r*r*r + 6.0*r*std::log(r))/6.0/pow(1.0-r,4);
+      return (2.0 + 3.0*r - 6.0*r*r + r*r*r + 6.0*r*std::log(r))/6.0/pow(1.0-r,4);
    }
 }
 
@@ -170,7 +170,7 @@ double OneLoopFunctionF(double r)
       return 2.0/3.0;
    }
    else {
-      (-3.0 + 4.0*r - r*r - 2.0*std::log(r))/pow(1.0-r,3);
+      return (-3.0 + 4.0*r - r*r - 2.0*std::log(r))/pow(1.0-r,3);
    }
 }
 
