--- a/templates/run.cpp.in
+++ b/templates/run.cpp.in
@@ -76,7 +76,7 @@ int run_solver(flexiblesusy::@ModelName@_slha_io& slha_io,
 
    spectrum_generator.run(qedqcd, input);
 
-   const auto models = spectrum_generator.get_models_slha();
+   auto models = spectrum_generator.get_models_slha();
    const auto& problems = spectrum_generator.get_problems();
 
    @ModelName@_scales scales;
