--- a/templates/mu_to_egamma.cpp.in
+++ b/templates/mu_to_egamma.cpp.in
@@ -124,6 +124,8 @@ double OneLoopFunctionB(double r)
 {
    if (is_zero(1.0-r)) {
       return 1.0/12.0;
+   } else if (is_zero(r)) {
+      return 1.0/6.0;
    }
    else {
       return (1.0 - 6.0*r + 3.0*r*r + 2.0*r*r*r - 6.0*r*r*std::log(r))/6.0/pow(1.0-r,4);
