--- a/templates/mu_to_egamma.cpp.in
+++ b/templates/mu_to_egamma.cpp.in
@@ -104,7 +104,7 @@ inline double sm_width(int generationIndex1,  int generationIndex2, const MRSSM2
    const auto leptonOutMass = context.mass<Fe>(indices2);
    const auto ratio = pow(leptonOutMass/leptonInMass,2);
    const auto GF {1.1667e-5};
-   const double Alpha = 1./128.;
+   const double Alpha = Sqr(Fe::electric_charge * unit_charge(context))/(4*Pi);
 
    return GF*GF * pow(leptonInMass,5) * (1.0 - 8.0*ratio ) * (1.0 + 0.5 * Alpha * (6.25-Sqr(Pi))/Pi)/(192.0*pow(Pi,3));
 }
