--- a/model_files/SM/FlexibleSUSY.m.in
+++ b/model_files/SM/FlexibleSUSY.m.in
@@ -60,14 +60,10 @@ LowPoleMassPrecision     = {};
 
 ExtraSLHAOutputBlocks = {
    {FlexibleSUSYLowEnergy,
-           {{21, FlexibleSUSYObservable`aMuon},
-            {23, FlexibleSUSYObservable`EDM[Fe[1]]},
-            {24, FlexibleSUSYObservable`EDM[Fe[2]]},
-            {25, FlexibleSUSYObservable`EDM[Fe[3]]},
-            {26, FlexibleSUSYObservable`MuEGamma[Fe[1]]},
-            {27, FlexibleSUSYObservable`MuEGamma[Fe[2]]},
-            {28, FlexibleSUSYObservable`MuEGamma[Fe[3]]}
-            } }
+           {{21, FlexibleSUSYObservable`aMuon} } },
+   {EFFHIGGSCOUPLINGS, NoScale,
+           {{1, FlexibleSUSYObservable`CpHiggsPhotonPhoton},
+            {2, FlexibleSUSYObservable`CpHiggsGluonGluon} } }
 };
 
 SARAH`ParameterDefinitions = Append[
