--- a/templates/mu_to_egamma.cpp.in
+++ b/templates/mu_to_egamma.cpp.in
@@ -94,8 +94,8 @@ struct EDMVertexCorrectionFS {
 
 namespace flexiblesusy {
 namespace @ModelName@_mu_to_egamma {
-inline double sm_width(int generationIndex1,  int generationIndex2, const MRSSM2_mass_eigenstates& model ) {
-   MRSSM2_mass_eigenstates model_ = model;
+inline double sm_width(int generationIndex1,  int generationIndex2, const @ModelName@_mass_eigenstates& model ) {
+   @ModelName@_mass_eigenstates model_ = model;
    EvaluationContext context{ model_ };
    std::array<int, 1> indices1 = { generationIndex1 };
    std::array<int, 1> indices2 = { generationIndex2 };
