correcting mathlink.h include statement

--- a/templates/librarylink.cpp.in
+++ b/templates/librarylink.cpp.in
@@ -36,7 +36,7 @@
 #include "standard_model_two_scale_model.hpp"
 #include "lowe.h"
 
-#include "mathlink.h"
+#include <mathlink.h>
 #include "mathlink_utils.hpp"
 #include "WolframLibrary.h"
 
