ignore header file(s) that cannot be found
This suppresses error messages due to the fact that depgen.x does not
handle #ifdef and #define statements correctly.

--- a/config/Makefile.in
+++ b/config/Makefile.in
@@ -215,16 +215,16 @@ depend:  clean-dep
 depend:  $(ALLDEP)
 
 %.d: %.cpp | $(DEPGEN)
-	$(DEPGEN) $(CPPFLAGS) -MM -o '$@' -MT '$*.o' $^
+	$(DEPGEN) $(CPPFLAGS) -MM -MI -o '$@' -MT '$*.o' $^
 
 %.d: %.c | $(DEPGEN)
-	$(DEPGEN) $(CPPFLAGS) -MM -o '$@' -MT '$*.o' $^
+	$(DEPGEN) $(CPPFLAGS) -MM -MI -o '$@' -MT '$*.o' $^
 
 %.d: %.f | $(DEPGEN)
-	$(DEPGEN) $(CPPFLAGS) -MM -o '$@' -MT '$*.o' $^
+	$(DEPGEN) $(CPPFLAGS) -MM -MI -o '$@' -MT '$*.o' $^
 
 %.d: %.F | $(DEPGEN)
-	$(DEPGEN) $(CPPFLAGS) -MM -o '$@' -MT '$*.o' $^
+	$(DEPGEN) $(CPPFLAGS) -MM -MI -o '$@' -MT '$*.o' $^
 
 distclean::
 	-rm -f Makefile
