refactored the code - the calculation of form factors is now separated from the calculation of observables

--- a/model_files/MRSSM2/FlexibleSUSY.m.in
+++ b/model_files/MRSSM2/FlexibleSUSY.m.in
@@ -2,7 +2,7 @@ FSModelName = "MRSSM2";
 FSEigenstates = SARAH`EWSB;
 FSDefaultSARAHModel = MRSSM;
 
-OnlyLowEnergyFlexibleSUSY = True;
+OnlyLowEnergyFlexibleSUSY = False;
 
 MINPAR = {
     {3, TanBeta}
