--- a/templates/mu_to_egamma.cpp.in
+++ b/templates/mu_to_egamma.cpp.in
@@ -326,7 +326,7 @@ EDMField1, EDMField2, PhotonEmitter, ExchangeField
 
          // eq. 18 of hep-ph/9510309
          const std::complex<double> A1L =
-            -1./18. * vertexOut.right() * vertexIn.left() * OneLoopFunctionD(x);
+            1./18. * vertexOut.right() * vertexIn.left() * OneLoopFunctionD(x);
          // eq. 19 of hep-ph/9510309
          const std::complex<double> A2L = 
             vertexOut.left() * vertexIn.right() * OneLoopFunctionE(x) 
@@ -340,7 +340,7 @@ EDMField1, EDMField2, PhotonEmitter, ExchangeField
             + vertexOut.right()* vertexIn.right() * photonEmitterMass/leptonMass * OneLoopFunctionF(x);
          const std::complex<double> massFactor = pow(exchangeFieldMass,-2);
 
-         res += - oneOver32PiSquared * photonEmitterCharge * massFactor 
+         res -= oneOver32PiSquared * photonEmitterCharge * massFactor 
             * std::valarray<std::complex<double>> {A1L, A1R, A2L, A2R};
       }
    }
