--- a/templates/module.mk.in
+++ b/templates/module.mk.in
@@ -168,7 +168,7 @@ METACODE_STAMP_@CLASSNAME@ := $(DIR)/00_DELETE_ME_TO_RERUN_METACODE
 
 ifeq ($(ENABLE_META),yes)
 SARAH_MODEL_FILES_@CLASSNAME@ := \
-		$(shell $(SARAH_DEP_GEN) $(SARAH_MODEL))
+		$(shell $(SARAH_DEP_GEN) $(SARAH_MODEL_DIR) $(SARAH_MODEL))
 endif
 
 .PHONY:         all-$(MODNAME) clean-$(MODNAME) clean-$(MODNAME)-src \
