--- a/.gitattributes
+++ b/.gitattributes
@@ -30,6 +30,7 @@ model_files/cCMSSM              export-ignore
 model_files/complexMSSM         export-ignore
 model_files/CMSSMSemiAnalyticMW export-ignore
 model_files/CMSSMCPVSemiAnalytic export-ignore
+model_files/CMSSMCPVSemiAnalyticMW export-ignore
 model_files/CMSSMFPIAbsolute    export-ignore
 model_files/CMSSMFPIRelative    export-ignore
 model_files/CMSSMFPITadpole     export-ignore
