--- a/templates/observables.cpp.in
+++ b/templates/observables.cpp.in
@@ -39,7 +39,7 @@
 #define EDM0(p) edm_ ## p
 #define EDM1(p,idx) edm_ ## p ## _ ## idx
 #define MuEGamma0(p) mu_to_egamma_ ## p
-#define MuEGamma1(pIn,idxIn,pOut,idxOut) pIn ## _to_ ## pOut
+#define MuEGamma1(pIn,idxIn,pOut,idxOut,spec) pIn ## _to_ ## pOut ## _ ## spec
 #define EFFCPHIGGSPHOTONPHOTON eff_cp_higgs_photon_photon
 #define EFFCPHIGGSGLUONGLUON eff_cp_higgs_gluon_gluon
 #define EFFCPPSEUDOSCALARPHOTONPHOTON eff_cp_pseudoscalar_photon_photon
